# gh-spam-analysis-proj

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  aqua.yaml  justfile
.config/: nextest.toml
.github/workflows/: ci.yml  docker-publish.yml  helm-publish.yml
charts/: github-spam-lab-0.1.0.tgz  index.yaml
charts/github-spam-lab/: Chart.yaml  values.yaml
charts/github-spam-lab/templates/: _helpers.tpl  deployment-api.yaml  deployment-collector.yaml  ingress.yaml  service-api.yaml  service-collector.yaml  serviceaccount.yaml
config/: default.toml
crates/analysis/: Cargo.toml
crates/analysis/src/: features.rs  lib.rs  rules.rs  scorer.rs
crates/api/: Cargo.toml
crates/api/src/: dto.rs  error.rs  lib.rs  main.rs  routes.rs
crates/api/tests/: collection_jobs.rs
crates/collector/: Cargo.toml
crates/collector/src/: client.rs  lib.rs  main.rs  metrics.rs  service.rs
crates/collector/src/fetcher/: graphql.rs  hybrid.rs  mod.rs  rest.rs
crates/collector/tests/: concurrency.rs  hybrid_fetcher_tests.rs  job_status_transitions.rs  missing_found_flags.rs  pr_ingest.rs  repo_dedup_scenario.rs  seed_mismatch.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  errors.rs  lib.rs  logging.rs  text.rs
crates/db/: Cargo.toml  build.rs
crates/db/.sqlx/: query-ad2debf4de5763493453930666d1bd004f0324590bab4f03e4eed373f4838050.json
crates/db/src/: errors.rs  lib.rs  models.rs  pg.rs  repositories.rs
crates/db/tests/: repositories_dedup.rs  repository_integration.rs
crates/db_test_fixture/: Cargo.toml
crates/db_test_fixture/src/: lib.rs
crates/gh_broker/: Cargo.toml
crates/gh_broker/src/: backoff.rs  broker.rs  cache.rs  error.rs  lib.rs  metrics.rs  model.rs  token.rs
crates/gh_broker/tests/: request_key.rs
crates/normalizer/: Cargo.toml
crates/normalizer/src/: lib.rs  models.rs  payloads.rs  transform.rs
docker/: .env.example  docker-compose.yml  init-db.sh
docker/obs/: alert.rules.yml  alertmanager.yml  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml  tempo.yaml
docker/obs/grafana/dashboards/: github-spam-lab.json  otel-logs.json
docker/obs/grafana/provisioning/alerting/: contact-points.yaml  policies.yaml
docker/obs/grafana/provisioning/dashboards/: default.yml
docker/obs/grafana/provisioning/datasources/: default.yml
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_collection_jobs.down.sql  0002_collection_jobs.up.sql  0003_update_collection_status_add_error.down.sql  0003_update_collection_status_add_error.up.sql  0004_resource_found_flag.down.sql  0004_resource_found_flag.up.sql  0005_repos_full_name_constraints.down.sql  0005_repos_full_name_constraints.up.sql
scripts/: register_repo.sh  register_top_star_repos.sh  seed_repos.json
