[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/db",
    "crates/gh_broker",
    "crates/normalizer",
    "crates/collector",
    "crates/analysis",
    "crates/api",
    "crates/db_test_fixture",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["GitHub Spam Lab Contributors"]
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
anyhow = "1.0.82"
async-trait = "0.1.81"
axum = { version = "0.7.4", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.14.0"
dotenvy = "0.15.7"
futures = "0.3.30"
http = "1.0.0"
httpdate = "1.0.3"
hyper = { version = "1.2.0", features = ["http1", "http2", "client"] }
lru = "0.11.1"
fastrand = "2.0.1"
mockall = "0.12.1"
once_cell = "1.19.0"
prometheus = "0.13.4"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.25", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_with = { version = "3.4.0", features = ["json"] }
sha2 = "0.10.8"
smallvec = "1.13.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.6.1", features = ["v4", "serde", "fast-rng"] }
url = "2.4.1"
