[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
analysis = { path = "../analysis" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
common = { path = "../common" }
db = { path = "../db" }
prometheus.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
once_cell.workspace = true
