[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
analysis = { path = "../analysis" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
common = { path = "../common", features = ["otel"] }
db = { path = "../db" }
prometheus.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true
hyper.workspace = true
tower = { version = "0.4.13", features = ["util"] }
