[package]
name = "collector"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
common = { path = "../common" }
db = { path = "../db" }
futures.workspace = true
gh_broker = { path = "../gh_broker" }
http.workspace = true
normalizer = { path = "../normalizer" }
analysis = { path = "../analysis" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
axum.workspace = true
once_cell.workspace = true
prometheus.workspace = true
