[package]
name = "common"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
config.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sha2.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

[features]
default = ["otel"]
# Enable OpenTelemetry tracing export. When disabled, logging falls back to stderr.
otel = [
  "tracing-opentelemetry",
  "opentelemetry",
  "opentelemetry_sdk",
  "opentelemetry-otlp",
]
