[package]
name = "db"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
db_test_fixture = { path = "../db_test_fixture" }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
