[package]
name = "db_test_fixture"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common = { path = "../common" }
db = { path = "../db" }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
