[package]
name = "normalizer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
